...

export default function EntitiesScreen({ navigation }) {
  return (
    <ScrollView style={styles.container} contentContainerStyle={styles.paddedScrollView} testID="entityScreenScrollList">
      <Text style={styles.centerText}>JHipster Entities will appear below</Text>
      <RoundedButton text="UserProfile" onPress={() => navigation.navigate('UserProfile')} testID="userProfileEntityScreenButton" />
      <RoundedButton text="SocialAccount" onPress={() => navigation.navigate('SocialAccount')} testID="socialAccountEntityScreenButton" />
      <RoundedButton
        text="TeacherProfile"
        onPress={() => navigation.navigate('TeacherProfile')}
        testID="teacherProfileEntityScreenButton"
      />
      <RoundedButton
        text="StudentProfile"
        onPress={() => navigation.navigate('StudentProfile')}
        testID="studentProfileEntityScreenButton"
      />
      <RoundedButton text="Course" onPress={() => navigation.navigate('Course')} testID="courseEntityScreenButton" />
      <RoundedButton text="CourseClass" onPress={() => navigation.navigate('CourseClass')} testID="courseClassEntityScreenButton" />
      <RoundedButton text="Lesson" onPress={() => navigation.navigate('Lesson')} testID="lessonEntityScreenButton" />
      <RoundedButton text="Schedule" onPress={() => navigation.navigate('Schedule')} testID="scheduleEntityScreenButton" />
      <RoundedButton text="Quiz" onPress={() => navigation.navigate('Quiz')} testID="quizEntityScreenButton" />
...
