...
      return;
    }
    setPage(page + 1);
    fetchSocialAccounts();
  };
  return (
    <View style={styles.container} testID="socialAccountScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={socialAccountList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
