...
      return;
    }
    setPage(page + 1);
    fetchStudentProfiles();
  };
  return (
    <View style={styles.container} testID="studentProfileScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={studentProfileList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
